<resources>
    <string name="app_name">StreetShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="infoText"><br/> + <font color="blue"> Info </font></string>


    <string name="activity_title_cart">Cart</string>
    <string name="title_info">info</string>
    <string name="title_about">about</string>
    <string name="title_cart">Cart</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="birthdate">Birthdate</string>
    <string name="signin">Sign in</string>
    <string name="forgot_password">I forgot password</string>
    <string name="create_new_account">Create new account</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
</resources>
