<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:gravity="center"
    tools:showIn="@layout/activity_register">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Username"
            android:padding="7dp"
            android:ems="10"
            android:textColor="@color/colorBlack"
            android:background="@drawable/corner_gray_border"
            android:id="@+id/edtRegFirstName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Name"
            android:padding="7dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/corner_gray_border"
            android:id="@+id/edtRegLastName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/email"
            android:padding="7dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/corner_gray_border"
            android:id="@+id/edtRegEmail" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:padding="7dp"
            android:ems="10"
            android:hint="@string/birthdate"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:background="@drawable/corner_gray_border"
            android:id="@+id/edtRegBod" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:padding="7dp"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/corner_gray_border"
            android:id="@+id/edtRegPassword" />


        <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:background="@mipmap/btn_sign"
            android:id="@+id/btnRegRegister" />


    </LinearLayout>




</RelativeLayout>
