<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:scaleType="fitXY"
            android:src="@mipmap/leftbottom"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@mipmap/right_bottom"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@mipmap/logo"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/pwd_bg"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="60dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginRight="60dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/icn_username"/>

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:singleLine="true"
                    android:lines="1"
                    android:background="@android:color/transparent"
                    android:hint="Email"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@mipmap/password_bg"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="60dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginRight="60dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/icn_pwd"/>

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:lines="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"/>

            </LinearLayout>


            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@mipmap/btn_sign"
                android:text="@string/signin"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp">
                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:text="@string/forgot_password"/>
                <TextView
                    android:id="@+id/txtCreateAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:gravity="right"
                    android:text="@string/create_new_account"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imgFaceBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icn_fb" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="2dp"
                    android:background="@color/colorWhite">

                </View>

                <ImageView
                    android:id="@+id/imgTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icn_twitter"/>
                <View
                    android:layout_width="30dp"
                    android:layout_height="2dp"
                    android:background="@color/colorWhite"/>


                <ImageView
                    android:id="@+id/imgGooglePlus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icn_google"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
